Fix navbar title alignment

--- a/src/styles/src/styles.scss
+++ b/src/styles/src/styles.scss
@@ -172,7 +172,7 @@ input[type=text], input[type=password], input[type=date], input[type=datetime-lo
         flex-grow: 0;
         flex-shrink: 0;
         margin-left: 1.5rem;
-        margin-top: 0.25rem;
+        margin-top: 0.4rem;
         font-size: 2rem;
 
         a {
